--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,26 +1,1 @@
-.App {
-  display: flex;
-  padding: 15px;
-}
-.App .Meta {
-  flex-grow: 1;
-  padding-right: 15px;
-}
-.certificateWrapper {
-  position: relative;
-}
-.p {
-  margin: 0;
-  position: absolute;
-  transform: translateX(-50%);
-  margin-top: 20px;
-  color: red;
-  left: 50%;
-  text-align: center;
-  top: 330px;
-  font-size: 20pt;
-  white-space: nowrap;
-  bottom: 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
+/*  */
